fixes spacing issue

--- a/css/agency.css
+++ b/css/agency.css
@@ -56,7 +56,7 @@ section h3.section-subheading {
 
 @media (min-width: 768px) {
   section {
-    padding: 150px 0;
+    /* padding: 150px 0; */
   }
 }
 
@@ -718,8 +718,3 @@ div-top {
 #ynarow {
   padding: 20px;
 }
-
-
-
-
-
